--- a/content/modules/ROOT/pages/index.adoc
+++ b/content/modules/ROOT/pages/index.adoc
@@ -36,25 +36,10 @@ cat /etc/redhat-release
 Red Hat Enterprise Linux release 7.9 (Maipo)
 ----
 
-Since future versions of RHEL disable SSH login for root by default, it
-is important to start retraining yourself to connect via a user account,
-such as the `+rhel+` account you’re currently using, then utilizing
-`+sudo+` or `+su+` to gain administrative privaledges. To simplify your
-experience, become the root user now:
+First, you need to enable specific rhel-7-server repositories. These have already been enabled for you in this lab environment, but we will use the subscription-manager command to enable them and verify they are active.
 
-[source,bash,subs="+macros,+attributes",role=execute]
-----
-sudo -i
-----
 
-[source,text]
-----
-$ sudo -i
-#
-----
-
-First, you need to enable the rhel-7-server repositories using the
-subscription-manager command: >**Pro Tip:** See how you can actually
+TIP: See how you can actually
 combine these two operations into one!
 
 [source,bash,subs="+macros,+attributes",role=execute]
