--- a/content/modules/ROOT/pages/module-04.adoc
+++ b/content/modules/ROOT/pages/module-04.adoc
@@ -1,14 +1,17 @@
 == Running the upgrade
 
 Now that you have verified the RHEL system meets all the expected
-conditions, it is time to kick off the upgrade process: (Note: This
-process will take awhile.)
+conditions, it is time to kick off the upgrade process:
 
+NOTE: This process will take multiple minutes.
+
+.Command
 [source,bash,subs="+macros,+attributes",role=execute]
 ----
 leapp upgrade --target 8.8
 ----
 
+.Output
 [source,text]
 ----
 # leapp upgrade --target 8.8
@@ -40,31 +43,15 @@ A report has been generated at /var/log/leapp/leapp-report.txt
 Answerfile has been generated at /var/log/leapp/answerfile
 ----
 
-____
-*Disclaimer:* The Leapp process can take upwards of 15 minutes to run.
-Instead of waiting for that process to complete, a second server has
-been running the upgrade in the background. If you would like to save
-some time switch to the RHEL2 tab to finish the *Verifying the upgrade*
-section.
-____
-
-.rhelTabs.png
-image::rhelTabs.png[rhelTabs.png]
-
-The upgrade has only been _staged_; it has not been completed at this
+The upgrade has only been staged; it has not been completed at this
 point. A reboot is required for the RHEL 8-based initial RAM disk image
 (initramfs), upgrades all packages and automatically reboots to the RHEL
 8 system.
 
-ProTip: You can combine these two steps with the –reboot option
-`+leapp upgrade --target 8.8 --reboot+`
+TIP: You can combine these two steps with the –reboot option
+`*leapp upgrade --target 8.8 --reboot*`
 
-[TIP]
-====
-You can combine these two steps with the –reboot option
-`+leapp upgrade --target 8.8 --reboot+`
-====
-
+.Command
 [source,bash,subs="+macros,+attributes",role=execute]
 ----
 reboot
@@ -77,14 +64,16 @@ order to see what the server is during during this process, you will
 need to connect to the virtual machine’s console using the `+virsh+`
 command:
 
+.Command
 [source,bash,subs="+macros,+attributes",role=execute]
 ----
 virsh console rhel07
 ----
 
-Once the upgrade has been completed, use `+CTRL + ]+` to disconnect from
+Once the upgrade has been completed, use `*CTRL + ]*` to disconnect from
 the console and log back in using ssh:
 
+.Command
 [source,bash,subs="+macros,+attributes",role=execute]
 ----
 ssh -i ~/.ssh/id_rsa rhel@rhel07
@@ -98,6 +87,7 @@ Once that is done, you will be logged into the system’s terminal once
 more. Finally, we will verify the update was successful by looking at
 the release file we referenced earlier in the lab:
 
+.Command
 [source,bash,subs="+macros,+attributes",role=execute]
 ----
 cat /etc/redhat-release
@@ -105,15 +95,18 @@ cat /etc/redhat-release
 
 Note that we are now running the latest version of RHEL 8!
 
+.Output
 [source,text]
 ----
 # cat /etc/redhat-release
 Red Hat Enterprise Linux release 8.8 (Ootpa)
 ----
 
-OPTIONAL: You may also review the log file if you so choose. The full
+.Optional
+NOTE: You may also review the log file if you so choose. The full
 output is available at /var/log/leapp/leapp-upgrade.log
 
+.Command
 [source,bash,subs="+macros,+attributes",role=execute]
 ----
 sudo less /var/log/leapp/leapp-upgrade.log
