--- a/content/modules/ROOT/pages/module-03.adoc
+++ b/content/modules/ROOT/pages/module-03.adoc
@@ -1,6 +1,6 @@
 You saw in the last step how Leapp produced an error. In this scenario,
 PAM modules are not in use. It is therefore safe to skip this check. To
-do so, replace the commented line `+# confirm =+` with a true statement.
+do so, replace the commented line *`+# confirm =+`* with a true statement.
 
 .Command
 [source,bash,subs="+macros,+attributes",role=execute]
@@ -48,9 +48,6 @@ leapp preupgrade --target 8.8
                       REPORT OVERVIEW
 ============================================================
 
-Upgrade has been inhibited due to the following problems:
-    1. Possible problems with remote login using root account
-
 HIGH and MEDIUM severity reports:
     1. Difference in Python versions and support in RHEL 8
     2. GRUB2 core will be automatically updated during the upgrade
@@ -58,10 +55,10 @@ HIGH and MEDIUM severity reports:
 
 Reports summary:
     Errors:                      0
-    Inhibitors:                  1
+    Inhibitors:                  0
     HIGH severity reports:       2
     MEDIUM severity reports:     1
-    LOW severity reports:        4
+    LOW severity reports:        5
     INFO severity reports:       3
 
 Before continuing, review the full report below for details about discovered problems and possible remediation instructions:
